--- a/presentationslides.Rmd
+++ b/presentationslides.Rmd
@@ -3,7 +3,7 @@ title: "Reading Files in R"
 author:
   - "Steve Harms"
 date: 
-  - "3/14/2020" 
+  - "2/13/2021" 
 output:
   xaringan::moon_reader:
     lib_dir: libs
@@ -35,6 +35,9 @@ library(maps)
 Some simple examples:
 
 - Reading common file types: .csv, Excel, text/delimited
+  +  How is R parsing the text?
+  +  Troubleshooting common errors
+  +  Focus on tabular data
   
   If time allows, quick examples:
   
@@ -46,8 +49,8 @@ Some simple examples:
 
 - base R supports reading text files, e.g. `read.table()`, `read.csv()`, `read.delim()` reads data from text files files with specified delimiters (commas, tabs, spaces, etc.)
 
-- Package `readr` also provides convenient similar functions with `read_*()` but is faster than base R
-  + It's part of the tidyverse
+- Package `readr` also provides convenient similar functions with `read_*()` but is typically faster than base R
+  + It's part of the tidyverse collection of packages
 ```{r, echo=T}
 library(tidyverse)
 ```
@@ -225,7 +228,7 @@ summary(KU)
 
 # URLs work too
 - Previous example was only for a file downloaded locally
-- If the file is located at a url instead, can pass the url directly to your `read_*`
+- If the file is located at a URL instead, can pass the URL directly to your `read_*`
 - Now, `read_csv()` downloads a temp file of ages of different members of Congress:
 
 ```{r, echo=T}
